...
    func downloadSpeciesJSON(){
        //Lataa palvelimelta listan ankkalajeista species-muuttujaan
        guard let downloadURL = urlspecies else{return}
        URLSession.shared.dataTask(with: downloadURL) { (data, urlResponse, error) in
            guard let data = data, error == nil, urlResponse != nil else {
                let alert = UIAlertController(title: "Download Error", message: "Error occured while trying to download species data from the server", preferredStyle: .alert)
                alert.addAction(UIAlertAction(title: "OK", style: .default, handler: { _ in
                    NSLog("Species Download Error Occured!" + error.debugDescription)
                }))
                self.present(alert, animated: true, completion: nil)
                return
            }
            do {
...
        var alertTitle = "Error!"
        
        //Ennen palvelimelle lähetystä täytyy todentaa että kaikki tarvittava data on muuttujissa saatavilla
        if inputCount != nil && inputCount! > 0 && inputDesc != nil && inputDesc != "" && urlPost != nil && inputSpecies != nil {
            let inputAnkka = Ankka(id: 0, species: inputSpecies!, description: inputDesc!, dateTime: inputTime, count: inputCount!)
            htmlPost(url: urlPost!, sighting: inputAnkka)
            let SuccessfulAlert = UIAlertController(title: "Successful", message: "Duckdata uploaded successfully", preferredStyle: .alert)
            SuccessfulAlert.addAction(UIAlertAction(title: "OK", style: .default, handler: { _ in
                NSLog("Duckdata upload successful!")
            }))
            self.present(SuccessfulAlert, animated: true, completion: nil)
            return
        }
...
