...
        </array>
    </customFonts>
    <scenes>
        <!--Add Sightning-->
        <scene sceneID="wmF-C4-SPx">
            <objects>
                <viewController id="ta0-CH-BbE" userLabel="Add Sightning" customClass="AnkkaPostViewController" customModule="ankka_new" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="AE3-8v-BdE">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YSo-Qs-vad">
                                <rect key="frame" x="183" y="189" width="48" height="23.666666666666657"/>
...
